--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shivani Mathur 2023 Painting Salon</title>
+  <title>Shivani Mathur 2023</title>
   <style>
     body {
       margin: 0;
@@ -73,23 +73,14 @@
 </head>
 <body>
   <div class="title">
-    Shivani Mathur<br>Painting Salon. Artquest<br>7th September 2023
+    Incessant, Shivani Mathur<br>2023
   </div>
   <div class="gif-container">
     <img id="gif1" src="20230818 people 2.GIF" alt="GIF 1">
     <button class="gif-button" id="playButton1">People</button>
-    <br>
-    <img id="gif2" src="20200626theeye.GIF" alt="GIF 2">
-    <button class="gif-button" id="playButton2">The Eye</button>
-    <br>
-    <img id="gif3" src="20180326unlockme1mb2.GIF" alt="GIF 3">
-    <button class="gif-button" id="playButton3">Unlock Me</button>
-    <br>
-    <img id="gif4" src="20180326innervoice1mb2.GIF" alt="GIF 4">
-    <button class="gif-button" id="playButton4">Inner Voice</button>
-    <br>
-    <img id="gif5" src="Infinity.GIF" alt="GIF 5">
-    <button class="gif-button" id="playButton5">Infinity</button>
+   
+    <img id="image" src="20230818 people 2.JPG" alt="image of  people">
+  
   </div>
   <div class="footer">
     Copyright Shivani Mathur. All rights reserved.
