--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div class="gif-container">
     <img id="image" src="20230818 people 2.JPG" alt="image of people">
-    <button class="gif-button" id="playButton1">Play GIF</button>
+    <button class="gif-button" id="playButton1">Play</button>
     <img id="gif1" src="20230818 people 2.GIF" alt="GIF 1" class="hidden">
   </div>
   <div class="footer">
